--- a/style.css
+++ b/style.css
@@ -13,7 +13,13 @@ html,
 body {
   height: 100vh;
   width: 100vw;
-  background-image: linear-gradient(to right, rgb(95, 0, 95) , rgb(217, 24, 185),rgb(217, 24, 185),purple);
+  background-image: linear-gradient(
+    to right,
+    rgb(95, 0, 95),
+    rgb(217, 24, 185),
+    rgb(217, 24, 185),
+    purple
+  );
 }
 .main-nav {
   width: 100%;
@@ -60,84 +66,118 @@ a:hover {
   justify-content: space-around;
   width: 10%;
 }
-i:hover{
-    color: purple;
+i:hover {
+  color: purple;
 }
-.hero-div{
-    margin-top: 90px;
-    display: flex;
-    /* padding: 10px; */
+.hero-div {
+  margin-top: 90px;
+  display: flex;
+  /* padding: 10px; */
 }
-.sdc{
-    font-size: 70px;
-    margin-left: 30px;
+.sdc {
+  font-size: 70px;
+  margin-left: 30px;
 }
-.hero1{
-    width: 60%;
-    /* background-image: linear-gradient(to right, purple , pink); */
+.hero1 {
+  width: 60%;
+  /* background-image: linear-gradient(to right, purple , pink); */
 }
-.hero{
-    width: 400px;
-    height: 400px;
+.hero {
+  width: 400px;
+  height: 400px;
 }
-.hero2{
-    width: 40%;
-    /* background-color: purple; */
-    display: flex;
-    justify-content: center;
+.hero2 {
+  width: 40%;
+  /* background-color: purple; */
+  display: flex;
+  justify-content: center;
 }
-.content-div{
-    margin-left: 30px;
-    margin-top: 10px;
-    max-width: 78%
+.content-div {
+  margin-left: 30px;
+  margin-top: 10px;
+  max-width: 78%;
 }
-.head-div{
-    margin-top: 40px;
+.head-div {
+  margin-top: 40px;
 }
-.explore{
-    padding: 10px;
-    color: white;
-    margin: 30px ;
-    border: 1px solid white;
-    border-radius: 15px;
-    cursor: pointer;
-    background-color: transparent;
-    width: 200px;
-    font-weight: 700;
-    font-size: 18px;
+.explore {
+  padding: 10px;
+  color: white;
+  margin: 30px;
+  border: 1px solid white;
+  border-radius: 15px;
+  cursor: pointer;
+  background-color: transparent;
+  width: 200px;
+  font-weight: 700;
+  font-size: 18px;
 }
-.explore:hover{
-    background-color: white;
-    color: purple;
+.explore:hover {
+  background-color: white;
+  color: purple;
 }
-.about-logo{
-    width: 270px;
-    height:270px;
+.about-logo {
+  width: 270px;
+  height: 270px;
 }
-.about1{
-    width: 25%;
-    /* background-color: red; */
+.about1 {
+  width: 25%;
+  /* background-color: red; */
 }
-.about2{
-    width: 60%;
-    /* background-color: green; */
+.about2 {
+  width: 60%;
+  /* background-color: green; */
 }
-.about-wrapper{
-    display: flex;
-    padding: 30px;
-    margin-top: 80px;
-    margin-left: 30px;
-    margin-right: 30px;
-    border: 1px solid white;
-    border-radius: 60px;
+.about-wrapper {
+  display: flex;
+  padding: 30px;
+  margin-top: 80px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border: 1px solid white;
+  border-radius: 60px;
+}
+.about {
+  font-size: 50px;
+}
+.about-head {
+  margin-bottom: 30px;
+}
+.event-div {
+  margin-top: 80px;
+  margin-left: 30px;
+  /* border: 1px solid black; */
+  margin-bottom: 200px;
+  margin-right: 30px;
+  height: 400px;
+}
+.event-head {
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-bottom: 30px;
+}
+.up-event {
+  font-size: 45px;
+  text-align: center;
+}
+.event-cards {
+  /* border: 2px solid red; */
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.card-img {
+  width: 280px;
+  height: 180px;
+}
+.card {
+  height: 270px;
+  width: 280px;
+  border: 1px solid rgb(172, 0, 235);
+}
+.card:hover {
+  border: 2px solid white;
+}
 
-}
-.about{
-    font-size: 50px;
-}
-.about-head{
-    margin-bottom: 30px;
-}
-.event-div{
-  margin-top: 100px;
-}
